# arandu

./: .cursorrules  .env.example  .gitignore  AGENT.md  AGENTS.md  BATCH_TRANSCRIPTION_GUIDE.md  CLAUDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.kg  Dockerfile.rocm  IMPLEMENTATION_READY.md  QUICK_START.md  README.md  REORGANIZATION-STATUS.md  TO-DO.md  WORKFLOW_IMPLEMENTATION.md  docker-compose.yml  hello.py  main.py  pyproject.toml  skills-lock.json  test_results.txt
.claude/commands/: commit-message.md  create-pr.md  merge-message.md  resolve-pr-comments.md
.claude/skills/commit-that/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/merge-message/: SKILL.md
.claude/skills/resolve-pr-comments/: SKILL.md
.github/: CI_SETUP.md  WORKFLOW_SUMMARY.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml
data/: cross_domain_sanity_questions.json
docs/: BATCH_PROCESSING_PATTERNS.md  BATCH_TRANSCRIPTION_GUIDE.md  DOCKER_LOCAL_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  JUDGE_PIPELINE_README.md  PCAD_ENVIRONMENT_VARIABLES.md  PCAD_GUIDE.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  QA_GENERATION_DEEP_DIVE.md  README.md  TESTING.md  TODO.md  composable_judge_pipeline.md  methodology.md  related-works.md  report.md
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/deployment/: docker.md  pcad.md  slurm.md
docs/development/: architecture.md  ci-cd.md  dependencies.md  schemas.md  testing.md
docs/implementation/: CLI_REFERENCE.md  CONFIGURATION.md  DATA_SCHEMAS.md  DEPENDENCIES.md  FILE_STRUCTURE.md
docs/planning/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICKSTART.md  PHASE_STATUS.md  ROADMAP.md
docs/plans/: 2026-03-04-codebase-reorganization-design.md  2026-03-04-codebase-reorganization-plan.md
docs/research/: decontextualization-qa-graphrag.md  judge-pipeline-calibration.md  vllm-multinode-slurm.md
docs/usage/: CONFIGURATION.md  EVALUATION.md  KG_CONSTRUCTION.md  QA_GENERATION.md  README.md
docs/user-guide/: cep-qa-generation.md  cli-reference.md  configuration.md  evaluation.md  getting-started.md  kg-construction.md  pec-qa-generation.md  qa-generation.md  rag-analysis.md  transcription-validation.md  transcription.md
input/: catalog.csv  catalog_old.csv  minimal-catalog.csv
prompts/kg/atlas/: concept_prompts.json  metadata_labels.json  prompts.json
prompts/kg/pt/: schema.json
prompts/qa/: en.json  pt.json
prompts/qa/cep/: en.json
prompts/qa/non_answerable/: pt.j2
prompts/qa/pec/: pt.json
resources/mermaid/: bloom-scaffolding.mmd  data-flow.mmd  qa-scoring.mmd
scripts/: _judge_analysis_common.py  analyze_judge_thresholds.py  analyze_qa_cohort_rag_outcome.py  check_failed_files.py  estimate_pipeline_cost.py  import_results.py  kg_relabel_predicate.py  kg_report.py  kg_structural_metrics.py  plot_judge_score_distributions.py  render_prompt_review.py  seed_thesis_transcripts.py  test-vllm-environment.sh  test_atlas_rag_retriever.py  test_judge.py  test_qa_judge.py  test_transcription_judge.py
scripts/slurm/: AGENTS.md  blaise.slurm  dashboard.py  draco.slurm  grace.slurm  job_common.sh  run_evaluation.slurm  run_kg_construction.slurm  run_qa_generation.slurm  sirius.slurm  tupi.slurm  turing.slurm  watch-job.sh
scripts/slurm/cep/: cep_common.sh  grace.slurm  sirius.slurm  tupi.slurm
scripts/slurm/evaluation/: run_evaluation.slurm
scripts/slurm/general/: cleanup.slurm
scripts/slurm/judge/: judge_common.sh  tupi.slurm
scripts/slurm/kg/: grace.slurm  kg_common.sh  pipeline-cleanup.slurm  sirius.slurm  tupi.slurm
scripts/slurm/pec/: grace.slurm  pec_common.sh  sirius.slurm  tupi.slurm
scripts/slurm/qa/: grace.slurm  qa_common.sh  sirius.slurm  tupi.slurm
scripts/slurm/rag/: answer.slurm  chunk.slurm  generate-non-answerable.slurm  judge-answers.slurm  kg-build-retriever-index.slurm  kg-link-passages.slurm  (+3 more)
src/arandu/: __init__.py  config.py  main.py  schemas.py
src/gtranscriber/: __init__.py  config.py  main.py  schemas.py
tests/: conftest.py  test_config.py  test_main.py  test_schemas.py
tests/cli/: test_app.py  test_chunk_cli.py  test_kg_build_retriever_index_cli.py  test_kg_link_passages_cli.py  test_retrieve_cli.py
tests/core/: test_batch.py  test_checkpoint.py  test_drive.py  test_engine.py  test_hardware.py  test_io.py  test_llm_client.py  test_media.py  test_qa_batch.py  test_qa_generator.py  test_results_manager.py  test_transcription_validator.py
tests/kg/: test_atlas_backend.py  test_batch.py  test_factory.py  test_passage_offsets.py  test_protocol.py
tests/metadata/: test_enrichment.py  test_extractor.py  test_protocol.py
tests/qa/: test_batch.py  test_schemas_chunking.py
tests/report/: conftest.py  test_api.py  test_collector.py  test_dataset.py  test_exporter.py  test_generator.py  test_schemas.py  test_service.py
tests/scripts/: test_estimate_pipeline_cost.py  test_import_results.py  test_judge_analysis_common.py
tests/shared/: test_checkpoint.py  test_drive.py  test_hardware.py  test_io.py  test_llm_client.py  test_llm_client_structured.py  test_results_manager.py  test_stats.py
tests/transcription/: test_batch.py  test_engine.py  test_judge.py  test_media.py  test_validator.py
tests/utils/: test_concurrency.py  test_console.py  test_logger.py  test_paths.py  test_text.py  test_ui.py
transcription/: __init__.py  load_model.py
(+435 files in other folders)
