[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "gtranscriber"
version = "0.1.0"
description = "Automated transcription system for media files stored in Google Drive using Whisper ASR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "sentencepiece>=0.2.1",
    "tenacity>=8.0.0",
    "transformers>=4.57.3",
    "typer[all]>=0.9.0",
    "uvicorn[standard]>=0.34.0",
    # LLM Integration (OpenAI SDK supports Ollama and other compatible endpoints)
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gtranscriber = "gtranscriber.main:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function  
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# CLI command functions don't need exhaustive annotations
"src/gtranscriber/main.py" = ["ANN001", "ANN201"]
# FastAPI route handlers intentionally use Depends/Query in defaults (B008)
# and ReportService is needed at runtime for FastAPI dependency inspection (TC001, TC003)
"src/gtranscriber/core/report/api.py" = ["B008", "TC001", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["gtranscriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["gtranscriber"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[project.optional-dependencies]
report = [
    "plotly>=6.0.0",
    "jinja2>=3.1.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
